# reth-new

./: Cargo.toml  Dockerfile.zkvm  Makefile
crates/interfaces/: Cargo.toml
crates/interfaces/src/: error.rs
crates/net/discv5/src/: lib.rs
crates/net/network/src/: network.rs
crates/primitives/src/: alloy_compat.rs
crates/primitives/src/chain/: spec.rs
crates/primitives/src/transaction/: mod.rs
crates/primitives/src/trie/: proofs.rs
crates/rpc/rpc-types/: Cargo.toml
crates/rpc/rpc-types/src/: net.rs
crates/rpc/rpc/src/eth/: signer.rs
crates/storage/provider/: Cargo.toml
crates/storage/provider/src/providers/state/: latest.rs
crates/transaction-pool/: Cargo.toml
crates/trie/src/prefix_set/: mod.rs
testing/zkevm-lib/: Cargo.toml
testing/zkevm-lib/src/: lib.rs  witness.rs
testing/zkvm/: Cargo.toml
testing/zkvm-script/: Cargo.toml
testing/zkvm-script/src/: cache.rs  main.rs  provider_db.rs  witness.rs
testing/zkvm/src/: main.rs
