[package]
name = "zkvm-script"
description = "Sample zkVM script"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
reth-primitives = { path = "../../crates/primitives", default-features = false}
reth-consensus.workspace = true
reth-interfaces = { path = "../../crates/interfaces", default-features = false }
reth-evm.workspace = true
revm.workspace = true
alloy-rpc-types.workspace = true
alloy-provider.workspace = true
url.workspace = true
reth-revm.workspace = true