[package]
name = "zkvm-script"
description = "Sample zkVM script"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
reth-primitives = { path = "../../crates/primitives", default-features = false, features = ["alloy-compat"]}
reth-consensus.workspace = true
reth-interfaces = { path = "../../crates/interfaces", default-features = false }
reth-evm.workspace = true
revm.workspace = true
alloy-rpc-types.workspace = true
alloy-provider = { workspace = true, features = ["reqwest"] }  
alloy-transport-http.workspace = true
url.workspace = true
reth-revm.workspace = true
reth-provider.workspace = true
reth-node-ethereum.workspace = true
revm-primitives.workspace = true
eyre.workspace = true
serde_json.workspace = true
reth-trie.workspace = true
tokio.workspace = true
ethers-providers = "2.0.14"
alloy-transport = "0.0.0-reserved"
async-std = "1.12.0"
